--- a/assed/template/task_form.html
+++ b/assed/template/task_form.html
@@ -20,22 +20,13 @@
           placeholder="Enter a Description"></textarea>
       </div>
       <div class="input-box">
-       <!-- <label for="exampleDataList" class="form-label">Assigned to</label>
+       <label for="exampleDataList" class="form-label">Assigned to</label>
         <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
-        <datalist id="datalistOptions" required name="" id="taskContact" multiple>
+        <datalist id="datalistOptions" required name="" multiple>
           <option value="Georg"></option>
           <option value="Alex"></option>
           <option value="Jean"></option>S
-        </datalist>-->
-
-        <!-- Ich habe hier die Liste von Bootsrapverwendet, schau malob das geht   -->
-         <label for="taskContact">Assigned to</label>
-        <select class="input-box" required name="" id="taskContact" multiple>
-          <option value="Georg">Georg</option>
-          <option value="Alex">Alex</option>
-          <option value="Jean">Jean</option>
-        </select> 
-
+        </datalist>
       </div>
 
     </div>
@@ -84,7 +75,7 @@
     </div>
     <div class="frame-29">
       <button class="button-secondary-wo-icon text-sm-btn">Clear</button>
-      <button class="button-wo-icon text-sm-btn" >Add Task</button>
+      <button class="button-wo-icon text-sm-btn">Add Task</button>
     </div>
 
   </form>
