load create contact

--- a/assed/template/header.html
+++ b/assed/template/header.html
@@ -1,4 +1,4 @@
-<div class="header-figma">
+<div id="header-figma" class="header-figma">
     <p class="frame-156-text">Kanban Project Management Tool</p>
     <div class="frame-42">
         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
