--- a/assed/template/sidebar.html
+++ b/assed/template/sidebar.html
@@ -1,4 +1,4 @@
-<div class="sidebar">
+<div id="sidebar" class="sidebar">
   <div class="cap2">
     <img src="/assed/svg/join_logo.svg" alt="">
   </div>
