--- a/assed/template/contact_site.html
+++ b/assed/template/contact_site.html
@@ -1,5 +1,6 @@
-<div class="generalcontacts-frame97">
-  <!--
+<div id="generalcontacts" class="">
+  <div class="generalcontacts-frame97">
+    <!--
     <div class="bar">
         <div class="vector-13"> 
             <img src="assed/svg/contact-imgs/Vector 13.svg" alt="">
@@ -11,21 +12,21 @@
 
     </div>  -->
 
-  <div class="btn-div">
-    <button class="add-new-contact-btn" onclick="initAddContact()">
-      <div class="add-new-contact-text-div">Add new contact</div>
+    <div class="btn-div">
+      <button class="add-new-contact-btn" onclick="initAddContact()">
+        <div class="add-new-contact-text-div">Add new contact</div>
 
-      <img src="assed/svg/contact-imgs/person_add.svg" alt="" class="add-img" />
-    </button>
-    
-  </div>
+        <img src="assed/svg/contact-imgs/person_add.svg" alt="" class="add-img" />
+      </button>
 
-  <div class="contact-letter-frame-119">A</div>
+    </div>
 
-  <img src="assed/svg/contact-imgs/Vector 10.svg" alt="" class="vector-10" />
+    <div class="contact-letter-frame-119">A</div>
 
-  <div id="contacts">
-    <!--<div class="contact-name-circle">
+    <img src="assed/svg/contact-imgs/Vector 10.svg" alt="" class="vector-10" />
+
+    <div id="contacts">
+      <!--<div class="contact-name-circle">
       <img src="assed/svg/contact-imgs/Ellipse 5.svg" alt="" />
       <div class="contact-name-circle-txt">AM</div>
     </div>
@@ -34,60 +35,49 @@
       <div class="contact-name-txt">Anton Mayer</div>
       <div class="contact-email">antom@gmail.com</div>
     </div>-->
-  </div>
-</div>
-
-<div class="contacts-header-frame40">
-  <div class="contacts-header-txt-bold">Contacts</div>
-  <img src="assed/svg/contact-imgs/Vector 5.svg" alt="" />
-  <div class="contacts-header-txt-small">Better with a team</div>
-</div>
-
-<!--View Contact-->
-<div class="view-contact-div">
-  <div class="show-name">
-    <div class="show-name-circle">
-      <img
-        src="assed/svg/contact-imgs/Ellipse 5.svg"
-        alt=""
-        class="show-name-circle-img"
-      />
-      <div class="show-name-circle-txt" id="iconDetail">AM</div>
     </div>
+  </div>
 
-    <div class="show-name-close">
-      <div class="name-container-frame81" id="nameContact">Anton Mayer</div>
-      <div class="edit-name">
-        <div class="edit-name-sub">
-          <img
-            src="assed/svg/contact-imgs/edit.svg"
-            alt=""
-            class="edit-pen-img"
-          />
-          <div class="edit-txt">Edit</div>
-        </div>
-        <div class="delete-container">
-          <img
-            src="assed/svg/contact-imgs/delete.svg"
-            alt=""
-            class="delete-img"
-          />
-          <div class="delete-txt">Delete</div>
+  <div class="contacts-header-frame40">
+    <div class="contacts-header-txt-bold">Contacts</div>
+    <img src="assed/svg/contact-imgs/Vector 5.svg" alt="" />
+    <div class="contacts-header-txt-small">Better with a team</div>
+  </div>
+
+  <!--View Contact-->
+  <div class="view-contact-div">
+    <div class="show-name">
+      <div class="show-name-circle">
+        <img src="assed/svg/contact-imgs/Ellipse 5.svg" alt="" class="show-name-circle-img" />
+        <div class="show-name-circle-txt" id="iconDetail">AM</div>
+      </div>
+
+      <div class="show-name-close">
+        <div class="name-container-frame81" id="nameContact">Anton Mayer</div>
+        <div class="edit-name">
+          <div class="edit-name-sub">
+            <img src="assed/svg/contact-imgs/edit.svg" alt="" class="edit-pen-img" />
+            <div class="edit-txt">Edit</div>
+          </div>
+          <div class="delete-container">
+            <img src="assed/svg/contact-imgs/delete.svg" alt="" class="delete-img" />
+            <div class="delete-txt">Delete</div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="contact-information">Contact Information</div>
+    <div class="contact-information">Contact Information</div>
 
-  <div class="information-mail-phone-div">
-    <div class="mail-div">
-      <div class="email-txt">Email</div>
-      <div class="actual-email" id="emailContact">antom@gmail.com</div>
-    </div>
-    <div class="phone-div">
-      <div class="phone-txt">Phone</div>
-      <div class="actual-phone-number" id="phoneNumer">+49 7345 5324</div>
+    <div class="information-mail-phone-div">
+      <div class="mail-div">
+        <div class="email-txt">Email</div>
+        <div class="actual-email" id="emailContact">antom@gmail.com</div>
+      </div>
+      <div class="phone-div">
+        <div class="phone-txt">Phone</div>
+        <div class="actual-phone-number" id="phoneNumer">+49 7345 5324</div>
+      </div>
     </div>
   </div>
 </div>
