--- a/assed/template/contact_site.html
+++ b/assed/template/contact_site.html
@@ -59,7 +59,7 @@
             <img src="assed/svg/contact-imgs/edit.svg" alt="" class="edit-pen-img" />
             <div class="edit-txt">Edit</div>
           </div>
-          <div class="delete-container">
+          <div onclick="removeContact()" class="delete-container">
             <img src="assed/svg/contact-imgs/delete.svg" alt="" class="delete-img" />
             <div class="delete-txt">Delete</div>
           </div>
@@ -67,7 +67,7 @@
       </div>
     </div>
 
-    <div class="contact-information">Contact Information</div>
+    <div class="contact-information">Contact Information</div> <div id="contactNumber"></div>
 
     <div class="information-mail-phone-div">
       <div class="mail-div">
