--- a/assed/template/draggablecards.html
+++ b/assed/template/draggablecards.html
@@ -12,8 +12,8 @@
                         </span>
 
                     </div>
-                    <button class="add-new-task-btn">
-                        <p class="add-new-task-text-div" onclick="updateHTML()">Add Task</p>
+                    <button class="add-new-task-btn" onclick="window.location.href='addtask.html'">
+                        <p class="add-new-task-text-div" >Add Task</p>
                         <img src="/assed/svg/add.svg" alt="">
                     </button>
                 </div>
