--- a/assed/template/task_form.html
+++ b/assed/template/task_form.html
@@ -64,7 +64,7 @@
         <label for="taskCategory">Category</label>
         <select class="input-box" required name="" id="taskCategory">
           <option value="To Do">To Do</option>
-          <option value="In progrss">In progrss</option>
+          <option value="In progress">In progress</option>
           <option value="Await feedback">Await feedback</option>
         </select>
       </div>
@@ -79,7 +79,7 @@
 
       <div class="mt-4" style="width: 100%;">
         <div class="input-group mb-3">
-          <input required type="text" id="task-input" class="form-control" placeholder="Add a subtask">
+          <input type="text" id="task-input" class="form-control" placeholder="Add a subtask">
           <div class="input-group-append">
             <button class="btn btn-primary" onclick="addSubTask()">Add</button>
           </div>
