--- a/css/addContact.css
+++ b/css/addContact.css
@@ -215,6 +215,16 @@ body {
     margin-left: 21px;*/
 }
 
+.inputfield-mail-img {
+    width: 20px;
+    height: 16px;
+}
+
+.inputfield-phone-img {
+    width: 18px;
+    height: 18px;
+}
+
 
 /* Contact-Sidebar*/
 .contact-sidebar {
@@ -222,8 +232,8 @@ body {
     height: 594px;
     gap: 12px;
     background-color: #2A3647;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
     padding-left: 48px;
 }
 
@@ -232,6 +242,9 @@ body {
     height: 129px;
     gap: 16px;
     position: absolute;
+    top: 265px;
+    display: flex;
+    flex-direction: column;
 }
 
 .contact-sidebar-txt-1 {
@@ -243,6 +256,30 @@ body {
     line-height: 73.2px;
     color: white;
 }
+
+.contact-sidebar-txt-2 {
+    width: 371px;
+    height: 32px;
+    font-family: inter;
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 32.4px;
+    color: #FFFFFF;
+}
+
+.contact-sidebar-graphic-img {
+    border: 3px;
+    color: #29ABE2;
+}
+
+.contact-sidebar-logo-div {
+    width: 55.6px;
+    height: 66.48px;
+    position: absolute;
+    top: 170px;
+}
+
+
 
 
 
