--- a/css/addContact.css
+++ b/css/addContact.css
@@ -20,6 +20,17 @@ body {
     top: 48px;
     left: 1142px;
     border-radius: 56;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    transition: background-color 2s;
+}
+
+.close-div:hover {
+    cursor: pointer;
+    border: 1.5px solid rgb(36, 36, 36);
+    background-color: #efeeee;
 }
 
 .close-img {
