css-updates for contacs.html

--- a/assed/template/contact_site.html
+++ b/assed/template/contact_site.html
@@ -21,11 +21,9 @@
 
     </div>
 
-    <div class="contact-letter-frame-119">A</div>
+   
 
-    <img src="assed/svg/contact-imgs/Vector 10.svg" alt="" class="vector-10" />
-
-    <div id="contacts">
+    <div id="contacts" class="contacts">
       <!--<div class="contact-name-circle">
       <img src="assed/svg/contact-imgs/Ellipse 5.svg" alt="" />
       <div class="contact-name-circle-txt">AM</div>
