--- a/css/contactsDefault.css
+++ b/css/contactsDefault.css
@@ -3,14 +3,21 @@
 .generalcontacts-frame97 {
     position: absolute;
     width: 456px;
-    height: 928px;
+    /*height: 628px;*/
+    height: calc(100vh - 96px);
     top: 96px;
     left: 232px;
-    overflow:scroll;
+    /*overflow:scroll;*/
     display: flex;
     flex-direction: column;
     /* justify-content: center; */
     align-items: center;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.contacts {
+    margin-top: 113px;
 }
 
 .bar {
@@ -42,6 +49,9 @@
 .btn-div {
     width: 456px;
     height: 101px;
+    z-index: 1;
+    position: fixed;
+    background-color: #F6F7F8;
 }
 
 .add-new-contact-btn {
