drag and drop, subtask, assined perons

--- a/assed/template/task_form.html
+++ b/assed/template/task_form.html
@@ -7,112 +7,107 @@
 
 
 <div class="task">
-  <form onsubmit="addTask(); return false;">
-    <!-- leftside -->
-    <div class="frame-219">
-      <div class="input-box">
-        <label for="taskTitle">Title*</label>
-        <input required id="taskTitle" class="form-control border-0" />
-      </div>
-      <div class="input-box">
-        <label for="taskDescription" class="form-label">Description</label>
-        <textarea required type="text" class="form-control" style="width: 100%;" rows="3" id="taskDescription"
-          placeholder="Enter a Description"></textarea>
-      </div>
-      <div class="mt-4" style="width: 100%;">
-        <label for="exampleDataList" class="form-label">Assigned to</label>
-        <div class="input-group mb-3">
-          <input required class="form-control selectpicker" list="datalistOptions" id="taskContact"
-            placeholder="Type to search...">
-          <datalist id="datalistOptions">
-            <option value="Georg"></option>
-            <option value="Alex"></option>
-            <option value="Jean"></option>
-          </datalist>
-          <div class="input-group-append">
-            <button class="btn btn-primary">Add</button>
-          </div>
+  <!-- <form onsubmit="addTask(); return false;"> -->
+  <!-- leftside -->
+  <div class="frame-219">
+    <div class="input-box">
+      <label for="taskTitle">Title*</label>
+      <input required id="taskTitle" class="form-control border-0" />
+    </div>
+    <div class="input-box">
+      <label for="taskDescription" class="form-label">Description</label>
+      <textarea required type="text" class="form-control" style="width: 100%;" rows="3" id="taskDescription"
+        placeholder="Enter a Description"></textarea>
+    </div>
+    <div class="mt-4" style="width: 100%;">
+      <label for="exampleDataList" class="form-label">Assigned to</label>
+      <div class="input-group mb-3">
+        <input required class="form-control selectpicker" list="datalistOptions" id="taskContact"
+          placeholder="Type to search...">
+        <datalist id="datalistOptions">
+          <option value="Georg"></option>
+          <option value="Alex"></option>
+          <option value="Jean"></option>
+        </datalist>
+        <div class="input-group-append">
+          <button class="btn btn-primary" onclick="addAssigned()">Add</button>
         </div>
       </div>
     </div>
-    <!-- right side -->
-    <div class="frame-39">
-      <div class="input-box">
-        <label for="tastDueDate">due Date</label>
-        <input required type="date" class="form-control border-0" name="" id="tastDueDate" placeholder="dd/mm/yyyy" />
-      </div>
+    <div id="assinedPersons" style="all: unset;"></div>
+  </div>
+  <!-- right side -->
+  <div class="frame-39">
+    <div class="input-box">
+      <label for="tastDueDate">due Date</label>
+      <input required type="date" class="form-control border-0" name="" id="tastDueDate" placeholder="dd/mm/yyyy" />
+    </div>
 
-      <div class="input-box">
-        <label for="prio-btngroup">Prio</label>
-        <div class="priority-button-group" id="prio-btngroup">
-          <button type="checkbox" class="priority-button priority-button-text txt-nodeco" tabindex="0">
-            <a style="text-decoration: none; color: black;">Urgent</a>
-            <img src="/assed/svg/Prio alta.svg" alt="">
-          </button>
-          <div class="priority-button-medium priority-button-text txt-nodeco" tabindex="0">
-            <a style="text-decoration: none; color: black;">Medium</a>
-            <img src="/assed/svg/Prio media.svg" alt="">
-          </div>
-          <div class="priority-button-low priority-button-text txt-nodeco" tabindex="0">
-            <a style="text-decoration: none; color: black;">Urgent</a>
-            <img src="/assed/svg/Prio baja.svg" alt="">
-          </div>
+    <div class="input-box">
+      <label for="prio-btngroup">Prio</label>
+      <div class="priority-button-group" id="prio-btngroup">
+        <button type="checkbox" class="priority-button priority-button-text txt-nodeco" tabindex="0">
+          <a style="text-decoration: none; color: black;">Urgent</a>
+          <img src="/assed/svg/Prio alta.svg" alt="">
+        </button>
+        <div class="priority-button-medium priority-button-text txt-nodeco" tabindex="0">
+          <a style="text-decoration: none; color: black;">Medium</a>
+          <img src="/assed/svg/Prio media.svg" alt="">
         </div>
-      </div>
-
-      <div class="input-box">
-        <label for="taskCategory">Category</label>
-        <select class="input-box" required name="" id="taskCategory">
-          <option value="To Do">To Do</option>
-          <option value="In progress">In progress</option>
-          <option value="Await feedback">Await feedback</option>
-        </select>
-      </div>
-
-      <!-- <div class="input-box">
-        <div class="input-group mb-3">
-          <input type="text" class="form-control" id="addsubtask" placeholder="Add new subtask"
-            aria-label="Recipient's username" aria-describedby="button-addon2">
-          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
-        </div>
-      </div> -->
-
-      <div class="mt-4" style="width: 100%;">
-        <div class="input-group mb-3">
-          <input type="text" id="task-input" class="form-control" placeholder="Add a subtask">
-          <div class="input-group-append">
-            <button class="btn btn-primary" onclick="addSubTask()">Add</button>
-          </div>
-        </div>
-        <div id="task-list">
-          <!-- Existing tasks will go here -->
+        <div class="priority-button-low priority-button-text txt-nodeco" tabindex="0">
+          <a style="text-decoration: none; color: black;">Urgent</a>
+          <img src="/assed/svg/Prio baja.svg" alt="">
         </div>
       </div>
     </div>
-    <div class="frame-29">
-      <button class="button-secondary-wo-icon text-sm-btn">Clear</button>
-      <button class="button-wo-icon text-sm-btn" >Add Task</button>
+
+    <div class="input-box">
+      <label for="taskCategory">Category</label>
+      <select class="input-box" required name="" id="taskCategory">
+        <option value="To Do">To Do</option>
+        <option value="In progress">In progress</option>
+        <option value="Await feedback">Await feedback</option>
+      </select>
     </div>
-  </form>
+
+
+
+    <div class="mt-4" style="width: 100%;">
+      <div class="input-group mb-3">
+        <input type="text" id="task-input" class="form-control" placeholder="Add a subtask">
+        <div class="input-group-append">
+          <button class="btn btn-primary" onclick="addSubTask()">Add</button>
+        </div>
+      </div>
+      <div id="task-list">
+        <!-- Existing tasks will go here -->
+      </div>
+    </div>
+  </div>
+  <div class="frame-29">
+    <button class="button-secondary-wo-icon text-sm-btn">Clear</button>
+    <button class="button-wo-icon text-sm-btn" onclick="addTask()">Add Task</button>
+  </div>
+  <!-- </form> -->
 </div>
 
 
 <!-- <div class="container mt-4">
-    <h1>Task List</h1>
-    <div class="input-group mb-3">
-      <input type="text" id="task-input" class="form-control" placeholder="Add a subtask">
-      <div class="input-group-append">
-        <button class="btn btn-primary" onclick="addSubTask()">Add</button>
-      </div>
+  <h1>Task List</h1>
+  <div class="input-group mb-3">
+    <input type="text" id="task-input" class="form-control" placeholder="Add a subtask">
+    <div class="input-group-append">
+      <button class="btn btn-primary" onclick="addSubTask()">Add</button>
     </div>
-    <div id="task-list">      
-      Existing tasks will go here
-    </div>
-  </div> -->
+  </div>
+  <div id="task-list">
+    Existing tasks will go here
+  </div>
+</div> -->
 
 
 
-</div>
+<!-- </div>
 
 <form style="padding-left: 242px;">
   <div class="input-group">
@@ -133,4 +128,4 @@
     </ul>
     <button type="button" class="btn btn-outline-secondary">Action</button>
   </div>
-</form>
+</form> -->
