--- a/css/draggablecards.css
+++ b/css/draggablecards.css
@@ -30,7 +30,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    cursor: grab;
+    /* cursor: grab; */
     /* Hinzufügen eines Zeigers für das Ziehen */
 }
 
