--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
     background-color: #F6F7F8 !important;
     margin: 0;
     padding: 0;
+    font-family: 'Inter', sans-serif;
 }
 
 /* div {
@@ -41,7 +42,6 @@ text {
 .loginInput {
     display: inline-flex;
     overflow: hidden;
-    padding: 48px 115px;
     border-radius: 30px;
     box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04);
     background: var(--white, #FFF);
@@ -49,7 +49,11 @@ text {
     align-items: center;
     gap: 32px;
 }
-
+.middle{
+    position: absolute;
+    left: 50vb;
+    top: 25vh;
+}
 
 .frame-153 {
     width: 652px;
@@ -68,18 +72,16 @@ text {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 16px;
-    margin-bottom: 16px;
+    width: 315px;
+    height: 89px;
 }
 
 .frame-159-text {
-    width: 315px;
     color: #000;
     font-family: Inter;
     font-size: 61px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%;
+    font-weight: bold;
+    line-height: 73.2px;
     text-align: center;
 
 }
@@ -97,29 +99,26 @@ text {
 .log-in-frigma {
     display: flex;
     height: 152px;
+    width: 422px;
     flex-direction: column;
     align-items: flex-start;
     gap: 32px;
-    margin-bottom: 16px;
 }
 
-.frame-14 {
+.frame-160{
+    gap: 24px;
     display: flex;
-    width: 422px;
-    padding: 12px 21px;
-    border-radius: 10px;
-    border: 1px solid var(--Style, #D1D1D1);
-    background: #FFF;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    gap: 10px;
 }
 
 .frame-157 {
-    display: flex;
-    width: 380px;
-    justify-content: space-between;
-    align-items: center;
-    flex-shrink: 0;
+   width: 422px;
+   height: 48px;
+}
+.color-input{
+    color:#D1D1D1 !important;
 }
 
 .frame-158 {
@@ -142,8 +141,6 @@ text {
 }
 
 .check-button-text {
-    width: 110px;
-    height: 19px;
     color: #000;
     font-family: Inter;
     font-size: 16px;
@@ -324,4 +321,93 @@ text {
     gap: 30vh;
     align-items: center;
     flex-shrink: 0;
+}
+.singincard{
+    width: 598px;
+    height: 630px;
+    position: absolute;
+    border-radius: 30px;
+    padding: 48px 88px;
+    gap: 32px;
+    background-color: white;
+    box-shadow: 0px 0px 14px 3px #0000000A;
+}
+.main-sing-up{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+.join-logo{
+    display: flex;
+    z-index: 99999;
+    position: absolute;
+    top: 10%;
+    left: 10%;
+}
+.frame-154{
+    width: 315px;
+    height: 89px;
+    gap: 16px;
+}
+.singup-p{
+    width: 315px;
+    height: 73px;
+    font-weight: bold;
+    font-size: 61px;
+    line-height: 73.2px;
+    text-align: center;
+    color: black;
+}
+.singup{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.frame-212{
+    width: 422px;
+    height: 326px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    gap: 16px;
+}
+.frame-14{
+    width: 422px;
+    height: 48px;
+    border-radius: 10px;
+    border: 1px solid #D1D1D1;
+    padding: 12px 21px;
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.privacy-p{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 231px;
+    height: 24px;
+    gap: 8px;
+}
+.check-button-privacy{
+    font-size: 16px;
+    color: #A8A8A8;
+}
+.singincardcontent{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+}
+.singupbtn{
+    width: 126px;
+    height: 55px;
+    border-radius: 8px;
+    padding: 15px 24px;
+    gap: 10px;
 }
