Login, Act User,

--- a/assed/template/header.html
+++ b/assed/template/header.html
@@ -16,7 +16,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 56 56">
                 <circle cx="28" cy="28" r="26.5" stroke="#2A3647" stroke-width="3" fill="none" />
                 <text class="frame-156-text" x="50%" y="50%" text-anchor="middle"
-                    alignment-baseline="middle" style="color: #29ABE2;">SM</text>
+                    alignment-baseline="middle" style="color: #29ABE2;" id="actUser">SM</text>
             </svg>
         </div>
     </div>
