edit contacts almost working

--- a/assed/template/contact_site.html
+++ b/assed/template/contact_site.html
@@ -53,7 +53,7 @@
       <div class="show-name-close">
         <div class="name-container-frame81" id="nameContact">Anton Mayer</div>
         <div class="edit-name">
-          <div onclick="editContact(`${index}`)" class="edit-name-sub">
+          <div onclick="initEditContact(`${globalIndexVariable}`)" id="edit-name-sub" class="edit-name-sub">
             <img src="assed/svg/contact-imgs/edit.svg" alt="" class="edit-pen-img" />
             <div class="edit-txt">Edit</div>
           </div>
