--- a/css/addContact.css
+++ b/css/addContact.css
@@ -130,6 +130,16 @@ body {
     color: #FFFFFF;
 }
 
+.save-edits-contact-btn {
+    width: 111px;
+    height: 57px;
+    border-radius:10px;
+    gap: 4px;
+    display: flex;
+    align-items: center;
+    background-color: #2A3647;
+}
+
 /*.create-contact-bounding-box-img {
     width: 24px;
     height: 24px;
