--- a/css/generalElements.css
+++ b/css/generalElements.css
@@ -34,7 +34,7 @@
 
 
 .button-wo-icon:hover {
-    background-color: #2a3647c4;
+    background-color: #29ABE2;
     box-shadow: var(--stronger);
 }
 
