--- a/css/board.css
+++ b/css/board.css
@@ -162,3 +162,30 @@
     color: #ffffff;
     margin: 0;
 }
+
+.floating-add-task-backlog-v-1 {
+    width: 1116px;
+    height: 870px;
+    overflow: hidden;
+    border-radius: 30px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
+    background: #FFF;
+    position: absolute;
+    left: 243px;
+    top: 64px;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+}
+
+.task-overlay-v-1 {
+    display: flex;
+    width: 525px;
+    padding: 48px 40px;
+    border-radius: 30px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
+    background: #FFF;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 24px;
+}
