--- a/assed/template/sidebar.html
+++ b/assed/template/sidebar.html
@@ -6,26 +6,29 @@
   <!--Icons for Sidebar-->
   <div class="prop-1-default">
 
-    <div class="sideMenu" id="summary" onclick="loadNextSite('summary')">
+    <div class="sideMenu" id="summary" onclick="loadNextSite('summary-content')">
       <img src="/assed/svg/summary.svg" alt="">
       <h3>Summary</h3>
     </div>
 
-    <div class="sideMenu" id="addtask" onclick="loadNextSite('addtask')">
+    <div class="sideMenu" id="addtask" onclick="loadNextSite('task-content')">
       <img src="/assed/svg/add_task.svg" alt="">
       <h3>Add Task</h3>
     </div>
 
-    <div class="sideMenu" id="addtask" onclick="loadNextSite('board')">
+    <div class="sideMenu" id="addtask" onclick="loadNextSite('board-content')">
       <img src="/assed/svg/board.svg" alt="">
       <h3>Board</h3>
     </div>
 
-    <div class="sideMenu" id="addtask" onclick="loadNextSite('contact')">
+    <div class="sideMenu" id="addtask" onclick="loadNextSite('contact-content')">
       <img src="/assed/svg/contact.svg" alt="">
       <h3>Contact</h3>
     </div>
-
+    <div class="sideMenu" id="addtask" onclick="loadNextSite('datenschutz-content')">
+      <img src="/assed/svg/contact.svg" alt="">
+      <h3>Datenschutz</h3>
+    </div>
   </div>
 </div>
 
