--- a/assed/template/sidebar.html
+++ b/assed/template/sidebar.html
@@ -6,29 +6,26 @@
   <!--Icons for Sidebar-->
   <div class="prop-1-default">
 
-    <div class="sideMenu" id="summary" onclick="loadNextSite('summary-content')">
+    <div class="sideMenu" id="summary" onclick="loadNextSite('summary')">
       <img src="/assed/svg/summary.svg" alt="">
       <h3>Summary</h3>
     </div>
 
-    <div class="sideMenu" id="addtask" onclick="loadNextSite('task-content')">
+    <div class="sideMenu" id="addtask" onclick="loadNextSite('addtask')">
       <img src="/assed/svg/add_task.svg" alt="">
       <h3>Add Task</h3>
     </div>
 
-    <div class="sideMenu" id="addtask" onclick="loadNextSite('board-content')">
+    <div class="sideMenu" id="addtask" onclick="loadNextSite('board')">
       <img src="/assed/svg/board.svg" alt="">
       <h3>Board</h3>
     </div>
 
-    <div class="sideMenu" id="addtask" onclick="loadNextSite('contact-content')">
+    <div class="sideMenu" id="addtask" onclick="loadNextSite('contact')">
       <img src="/assed/svg/contact.svg" alt="">
       <h3>Contact</h3>
     </div>
-    <div class="sideMenu" id="addtask" onclick="loadNextSite('datenschutz-content')">
-      <img src="/assed/svg/contact.svg" alt="">
-      <h3>Datenschutz</h3>
-    </div>
+
   </div>
 </div>
 
