Summary Urgent Sum

--- a/assed/template/summary_content.html
+++ b/assed/template/summary_content.html
@@ -25,13 +25,12 @@
             <div class="summary_card frame-summary">
                 <img class="logos-summary" src="/assed/svg/edit.svg" alt="">
                 <div>
-                    <p class="p-headline">1</p>
+                    <p class="p-headline" id="totalUrgent">1</p>
                     <p class="p-summary">To-do</p>
                 </div>
                 <img src="/assed/svg/vertical_line.svg" alt="">
                 <div>
-                    <p class="p-headline">1</p>
-                    <p class="p-summary">To-do</p>
+                    <p class="p-headline" id="urgentDate"></p>
                 </div>
             </div>
         </div>
