--- a/css/addtask.css
+++ b/css/addtask.css
@@ -16,7 +16,7 @@
     display: flex;
     width: 440px;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
     gap: 16px;
     width: 440px;
@@ -31,7 +31,7 @@
     display: flex;
     width: 440px;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
     gap: 24px;
     height: 416px;
