--- a/assed/template/draggablecards.html
+++ b/assed/template/draggablecards.html
@@ -12,7 +12,7 @@
                         </span>
 
                     </div>
-                    <button class="add-new-task-btn" onclick="window.location.href='addtask.html'">
+                    <button class="add-new-task-btn" onclick="addTaskPopUp(id)">
                         <p class="add-new-task-text-div" >Add Task</p>
                         <img src="/assed/svg/add.svg" alt="">
                     </button>
@@ -24,7 +24,7 @@
             <div class="kanban-column" id="todo-column" ondrop="drop('To Do')" ondragover="allowDrop(event)">
                 <div class="frame-136 column-title-text ">
                     <p>To Do</p>
-                    <div class="plus-button"><img src="/assed/svg/capa-1.svg" alt="" onclick="alert('opentask')"></div>
+                    <div class="plus-button"><img src="/assed/svg/capa-1.svg" alt="" onclick="addTaskPopUp(id)"></div>
                 </div>
                 <div style="all: unset;" id="todo-tasks">                    
                 </div>
