--- a/assed/template/task_form.html
+++ b/assed/template/task_form.html
@@ -4,8 +4,22 @@
 
 
 
-<form id="taskForm" action="" name="taskForm" onsubmit="return false; addTask()">
+<form class="taskForm" id="taskForm" action="" name="taskForm" onsubmit="addTask(); return false">
   <div class="frame-219">
+    <div class="" style="width: 100%;">
+      <label for="exampleDataList" class="form-label">Topic</label>
+      <div class="input-group mb-3">
+        <input class="form-control selectpicker" list="topicListOptions" id="taskTopic" placeholder="Type to search...">
+        <datalist id="topicListOptions">
+          <option value="User Storys"></option>
+          <option value="Technical Support"></option>
+          <option value="Coding"></option>
+        </datalist>
+        <!-- <div class="input-group-append">
+          <button class="btn btn-primary" form="taskForm" onclick="addAssigned(event)">Add</button>
+        </div> -->
+      </div>
+    </div>
     <div class="input-box">
       <label for="taskTitle">Title*</label>
       <input required id="taskTitle" class="form-control border-0" />
@@ -71,20 +85,24 @@
         <option value="Await feedback">Await feedback</option>
       </select>
     </div>
+
     <div class="mt-4" style="width: 100%;">
       <div class="input-group mb-3">
-        <input type="text" id="task-input" class="form-control" placeholder="Add a subtask">
+        <input required type="text" id="task-input" class="form-control" placeholder="Add a subtask">
         <div class="input-group-append">
           <button class="btn btn-primary" form="taskForm" onclick="addSubTask(event)">Add</button>
         </div>
       </div>
-      <div id="task-list">
-        <!-- Existing tasks will go here -->
-      </div>
+    </div>
+
+    <div id="task-list">
+      <!-- Existing tasks will go here -->
+    </div>
+    <div class="frame-29">
+      <button class="button-secondary-wo-icon text-sm-btn">Clear</button>
+      <button class="button-wo-icon text-sm-btn" name="submitTask" onclick="">Add Task</button>
     </div>
   </div>
-  <div class="frame-29">
-    <button class="button-secondary-wo-icon text-sm-btn">Clear</button>
-    <button class="button-wo-icon text-sm-btn" name="submitTask" onclick="">Add Task</button>
-  </div>
+
+  
 </form>
