taskcard final,BordAdj,statusbarDone

--- a/assed/template/task_form.html
+++ b/assed/template/task_form.html
@@ -4,7 +4,7 @@
 
 
 
-<form class="taskForm" id="taskForm" action="" name="taskForm" onsubmit="addTask(); return false">
+<form class="taskForm" id="taskForm" action="" name="taskForm" onsubmit="addTask(); updateHTML(); return false">
   <div class="frame-219">
     <div class="" style="width: 100%;">
       <label for="exampleDataList" class="form-label">Topic</label>
