--- a/assed/template/draggablecards.html
+++ b/assed/template/draggablecards.html
@@ -13,7 +13,7 @@
 
                     </div>
                     <button class="add-new-task-btn" onclick="addTaskPopUp(id)">
-                        <p class="add-new-task-text-div" >Add Task</p>
+                        <p class="add-new-task-text-div">Add Task</p>
                         <img src="/assed/svg/add.svg" alt="">
                     </button>
                 </div>
@@ -26,23 +26,23 @@
                     <p>To Do</p>
                     <div class="plus-button"><img src="/assed/svg/capa-1.svg" alt="" onclick="addTaskPopUp(id)"></div>
                 </div>
-                <div style="all: unset;" id="todo-tasks">                    
+                <div style="all: unset;" id="todo-tasks">
                 </div>
             </div>
             <div class="kanban-column" id="inprogress-column" ondrop="drop('In progress')"
                 ondragover="allowDrop(event)">
                 <div class="frame-136 column-title-text ">
                     <p>In Progress</p>
-                    <div class="plus-button"><img src="/assed/svg/capa-1.svg" alt=""></div>
+                    <div class="plus-button"><img src="/assed/svg/capa-1.svg" alt="" onclick="addTaskPopUp(id)"></div>
                 </div>
-                <div style="all: unset;" id="inprogress-tasks">                   
+                <div style="all: unset;" id="inprogress-tasks">
                 </div>
             </div>
             <div class="kanban-column" id="feedback-column" ondrop="drop('Await feedback')"
                 ondragover="allowDrop(event)">
                 <div class="frame-136 column-title-text ">
                     <p>Awaiting Feedback</p>
-                    <div class="plus-button"><img src="/assed/svg/capa-1.svg" alt=""></div>
+                    <div class="plus-button"><img src="/assed/svg/capa-1.svg" alt="" onclick="addTaskPopUp(id)"></div>
                 </div>
                 <dir style="all: unset;" id="Feedback-tasks"></dir>
             </div>
@@ -51,9 +51,11 @@
                     <p>Done</p>
 
                 </div>
-                <div style="all: unset;" id="done-tasks">                   
+                <div style="all: unset;" id="done-tasks">
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+
