--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* general style */
 
 body {
-    height: 100vh;
+    /* height: 100vh; */
     background-color: #F6F7F8 !important;
     margin: 0;
     padding: 0;
@@ -313,12 +313,12 @@ text {
     left: 0;
     display: flex;
     width: 232px;
-    min-height: 100vh;
+    min-height: 100%;
+    height: 100%;
     overflow: hidden;
     padding: 64px 0px;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
     background-color: #2A3D59;
-    ;
     flex-direction: column;
     gap: 30vh;
     align-items: center;
